--- a/boss-infos/pom.xml
+++ b/boss-infos/pom.xml
@@ -266,7 +266,7 @@
         <!--</dependency>-->
     </dependencies>
     <build>
-        <finalName>informations</finalName>
+        <finalName>infos</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
