--- a/boss-infos/src/main/webapp/WEB-INF/web.xml
+++ b/boss-infos/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+            http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
-  <display-name>informations</display-name>
+<display-name>infos</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring/spring.xml</param-value>
@@ -38,7 +37,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-
+  <!-- Filter实现防止xss注入 -->
+  <filter>
+    <filter-name>MyXssFilter</filter-name>
+    <filter-class>com.bmw.boss.common.filter.MyXssFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>MyXssFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <!-- 防止spring内存溢出监听器 -->
   <listener>
